--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,11 +9,11 @@ html {
 html, header, .text {
   background-color: black;
 }
-header, nav, .main, .tea, .categories, .pictures, .location, .details  {
+header, nav, .main, .tea, .categories, .pictures, .location, .details {
   display: flex;
 }
 
-.tea, .pictures, .location {
+.main, .tea, .pictures, .location {
   flex-direction: column;
 }
 
@@ -26,9 +26,13 @@ justify-content: space-between;
   align-items: center;
   padding: 10px;
 }
-
+header .img {
+  height: 50px;
+}
 nav{
   justify-content: space-between;
+  position: relative;
+  right: 20px;
 }
 
 a {
@@ -39,35 +43,46 @@ span {
   padding: 10px;
 }
 
-.main {
-  flex-direction: column;
-}
-
 .mission {
-  padding-top: 69px;
+  margin-top: 90px;
   height: 700px;
+  width: 1200px;
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg);
   align-content: center;
 }
 
-
+.mission > .text {
+  top: 50%;
+  bottom: 50%;
+}
 
 .tea {
   width: 1000px;
+  margin: 0 auto;
 }
 
 .categories {
   flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-img .pictures {
+.pictures img {
   height: 200px;
   width: 300px;
+}
+
+.pictures p {
+  position: relative;
+  top: -10px;
 }
 
 .location {
   height: 500px;
   background-image: url('https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg');
+}
+.location h2 {
+  position: relative;
+  bottom: -33px;
 }
 .details {
   justify-content: center;
@@ -76,4 +91,15 @@ img .pictures {
   background-color: black;
   width: 300px;
   margin: 20px;
+  opacity: 1;
+  line-height: 2;
+}
+
+.contact {
+  height: 200px;
+}
+
+.copyright {
+  text-align: left;
+  padding-left: 20px;
 }
